--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_svg: ^2.0.5
   animate_do: ^3.0.2
   font_awesome_flutter: ^10.7.0
+  http: ^0.13.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
